# FerrisCast

./: Cargo.toml  README.md
FerrisCastCore/: Cargo.toml
FerrisCastGUI/: Cargo.toml
FerrisCastGUI/src/: main.rs
ferris_cast_core/: Cargo.toml
ferris_cast_core/src/: config.rs  database.rs  lib.rs  main.rs
ferris_cast_core/tests/: parse_rss_test.rs
ferris_cast_gui/: Cargo.toml
ferris_cast_gui/src/: main.rs
