[package]
name = "ferris_cast_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.28.0", features=["full"]}
rss = "2.0.3"
reqwest = "0.11.17"
anyhow = "1.0.71"
chrono = "0.4.24"
